--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="star star--4">4</div>
                     <div class="star star--5">5</div>
                 </div>
-                <canvas id="canvas" class="canvas" width="300px" height="300px"></canvas>
+                <canvas id="canvas" class="canvas" width="300" height="300"></canvas>
             </div>
         </div>
     </div>
