--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Dungeon of Doom</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/app.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=320px, initial-scale=1, user-scalable=no">
 </head>
 
 <body>
