--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <div class="dialogs">
                     <div class="dialog dialog--current"><b>Гермиона: </b>Гарри, этот сундук охраняет дементор! Быстрее вызови патронуса! Тебе надо сделать взмах палкой и выкрикнуть Експекто Патронум! </div>
                     <div class="dialog"><b>Гермиона: </b>Отлично, Гарри! Мы нашли крестраж! Воткни со всей силы в дневник клык василиска!</div>
+                    <div class="dialog"><b>Гермиона: </b>Размахнись сильнее, Гарри!</div>
                     <div class="dialog"><b>Гермиона: </b>Втыкай, Гарри!</div>
                     <div class="dialog"><b>Гермиона: </b>Ура, Гарри! Мы победили!</div>
                 </div>
