--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
         <div class="popup popup_hidden popup_level_0">
             <div class="popup__content popup__content_level_0" touch-action="none">
                 <div class="popup__close">╳</div>
-                <div class="door-riddle">
-                    <div class="door-riddle__button door-riddle__button_0"></div>
-                    <div class="door-riddle__button door-riddle__button_1"></div>
-                    <div class="door-riddle__button door-riddle__button_2"></div>
+                <div class="dialogs">
+                    <div class="dialog dialog--current"><b>Гермиона:</b> Гарри, тебе надо переместить все шестеренки в пазы, причем одновременно!</div>
+                    <div class="dialog"><b>Гермиона:</b> Гарри, ты суешь шестеренки не в те пазы!</div>
+                    <div class="dialog"><b>Гермиона:</b> Гарри, отлично! Идем дальше!</div>
+                </div>
+                <div class="gears">
+                    <div class="gear gear--1" data-slot=".slot--1"></div>
+                    <div class="gear gear--2" data-slot=".slot--2"></div>
+                    <div class="gear gear--3" data-slot=".slot--3"></div>
+                    <div class="gear gear--4" data-slot=".slot--4"></div>
+                </div>
+                <div class="slots">
+                    <div class="slot slot--1"></div>
+                    <div class="slot slot--2"></div>
+                    <div class="slot slot--3"></div>
+                    <div class="slot slot--4"></div>
                 </div>
             </div>
         </div>
